--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>24</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>com.mycompany.arenamaste2.ArenaMaste2</exec.mainClass>
     </properties>
 </project>
